# SoftwareUpdaterCLI

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yaml
.github/workflows/: build.yaml
cli/: Cargo.toml
cli/src/: custom.rs  data.rs  lib.rs  main.rs  utils.rs
cli/src/app/: menu.rs  menu_select.rs  mod.rs  user_input.rs
cli/src/domain/: custom_app.rs  mod.rs
cli/src/storage/: store.rs
cli/src/use_cases/: command.rs  custom_app.rs  latest_version_api.rs  mod.rs  remove_select.rs
cli/tests/: custom.rs  integration_custom_menu.rs  integration_menu.rs
cli/tests/fixtures/: apps_data.json
cli/tests/mocks/: mock_inputs.rs  mock_menu.rs  mock_remove.rs  mod.rs
src/: custom.rs  data.rs  main.rs
