[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
semver = "1.0.27"
dialoguer = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
clap = { version = "4.5.53", features = ["derive"] }


[dev-dependencies]
test-case = "3.3.1"
tempfile = "3.23.0"
