[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
semver = "1.0.27"
dialoguer = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
clap = { version = "4.5.54", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
test-case = "3.3.1"
tempfile = "3.24.0"
